Phase 8 Security fix
